# gearshift_calculation_tool

./: .gitignore  AUTHORS.rst  CHANGELOG.rst  Gearshift-ProjectReview.py  README.md  README.rst  pyproject.toml  setup.py
GUI/: __init__.py
Notebooks/: GUI_binder_interface.ipynb  GUI_binder_interface_GUI.ipynb
Notebooks/conda/: conda-reqs.txt  environment.yaml
binder/: environment.yml  postBuild  requirements.txt  workspace.json
doc/: Gearshift-ProjectReview.ipynb  Gearshift-ProjectReview.py  api.rst  conf.py  gearshift.core.load.rst  gearshift.core.model.calculateShiftpointsNdvFullPC.corrections.rst  gearshift.core.write.rst  gearshift.rst  index.rst  installation.rst  intro.rst  model.rst  usage.rst
doc/_build/doctrees/: api.doctree  (+16 more)
docs/: index.rst
gearshift/: __init__.py  _version.py
gearshift/cli/: __init__.py
gearshift/core/: __init__.py
gearshift/demos/: ._gs_input_demo.xlsx  ._~$gs_input_demo.xlsx  gs_input_demo.xlsx  gs_input_demo_empty.xlsx  ~$gs_input_demo.xlsx
gearshift/doc/: index.rst
gearshift/docs/: conf.py  gearshift.docs.rst  gearshift.rst  index.rst
gearshift/source/: conf.py  index.rst
notebook_test/: Test_case_121.ipynb  Test_cases.ipynb  Test_cases_ALL_dim.ipynb  Test_cases_ALL_final.html
notebook_test/output_matlab/: ApplicableTrace.txt  AvailablePowersOutput.txt  ClutchDisengagedOutput.txt  ClutchHSTOutput.txt  ClutchUndefinedOutput.txt  GearCorrectionsOutput.txt  GearsOutput.txt  OriginalTrace.txt  RequiredEngineSpeedsOutput.txt  RequiredPowersOutput.txt  RequiredVehicleSpeedsOutput.txt
requirements/: readthedocs.txt
(+93 files in other folders)
